# static-bin

./: .gitignore  LICENSE  README.md  SPEC.md
.github/workflows/: deploy.yml
docs/: design-philosophy.md  size-comparison.md
implementations/c/: Makefile  README.md  demo.c  staticbin.c  staticbin.h
implementations/fortran/: Makefile  README.md
implementations/fortran/examples/: demo.f90
implementations/fortran/src/: staticbin.f90
implementations/javascript/: README.md  package.json
implementations/javascript/src/: staticbin.mjs
implementations/javascript/tests/: codec.test.mjs
implementations/python/: README.md  pyproject.toml
implementations/python/examples/: device_beacon.py  share_preset.py
implementations/python/staticbin/: __init__.py  __main__.py  codec.py
implementations/python/tests/: test_codec.py
web-next/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
web-next/src/: content.config.ts
web-next/src/components/: About.astro  Code.astro  Footer.astro  Format.astro  Hero.astro  Install.astro  Nav.astro  Playground.svelte  PlaygroundSection.astro  Ports.astro  Rationale.astro  SectionTitle.astro  UseCases.astro
web-next/src/content/roadmap/: 01-versioning.md  02-integrity.md  03-compression.md  04-future.md
web-next/src/content/tenets/: 01-tiny.md  02-readable.md  03-simple.md  04-portable.md
web-next/src/layouts/: Base.astro
web-next/src/lib/: hero-scroll.ts  motion-scroll.ts  shiki.ts  staticbin.ts
web-next/src/pages/: index.astro
web-next/src/styles/: global.css
(+6 files in other folders)
