[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "staticbin"
version = "1.0.0"
description = "Compact shared-schema state serialization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["serialization", "base64", "bitstream", "elias-gamma", "url-safe"]
authors = [{ name = "StaticBin authors" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
staticbin = "staticbin.__main__:main"

[project.urls]
Homepage      = "https://github.com/your-org/StaticBin"
Specification = "https://github.com/your-org/StaticBin/blob/main/SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["staticbin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"
